# SlicerKWNeuro

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  phase-0-findings.md
KWNeuroBrainExtract/: CMakeLists.txt  KWNeuroBrainExtract.py
KWNeuroBrainExtract/Resources/: requirements.txt
KWNeuroBrainExtract/Resources/UI/: KWNeuroBrainExtract.ui
KWNeuroBrainExtract/Testing/Python/: CMakeLists.txt  test_kwneurobrainextract.py
KWNeuroCSD/: CMakeLists.txt  KWNeuroCSD.py
KWNeuroCSD/Resources/: requirements.txt
KWNeuroCSD/Resources/UI/: KWNeuroCSD.ui
KWNeuroCSD/Testing/Python/: CMakeLists.txt  test_kwneurocsd.py
KWNeuroDTI/: CMakeLists.txt  KWNeuroDTI.py
KWNeuroDTI/Resources/: requirements.txt
KWNeuroDTI/Resources/UI/: KWNeuroDTI.ui
KWNeuroDTI/Testing/Python/: CMakeLists.txt  test_kwneurodti.py
KWNeuroDenoise/: CMakeLists.txt  KWNeuroDenoise.py
KWNeuroDenoise/Resources/: requirements.txt
KWNeuroDenoise/Resources/UI/: KWNeuroDenoise.ui
KWNeuroDenoise/Testing/Python/: CMakeLists.txt  test_kwneurodenoise.py
KWNeuroEnvironment/: CMakeLists.txt  KWNeuroEnvironment.py
KWNeuroEnvironment/Resources/: requirements.txt
KWNeuroEnvironment/Resources/UI/: KWNeuroEnvironment.ui
KWNeuroEnvironment/Testing/Python/: CMakeLists.txt  test_bridge_async_helpers.py  test_bridge_dti_roundtrip.py  test_bridge_dwi_roundtrip.py  test_bridge_transform_roundtrip.py  test_bridge_volume_roundtrip.py  test_env_panel_smoke.py
KWNeuroHarmonize/: CMakeLists.txt  KWNeuroHarmonize.py
KWNeuroHarmonize/Resources/: requirements.txt
KWNeuroHarmonize/Resources/UI/: KWNeuroHarmonize.ui
KWNeuroHarmonize/Testing/Python/: CMakeLists.txt  test_kwneuroharmonize.py
KWNeuroImporter/: CMakeLists.txt  KWNeuroImporter.py
KWNeuroImporter/Resources/: requirements.txt
KWNeuroImporter/Resources/UI/: KWNeuroImporter.ui
KWNeuroImporter/Testing/Python/: CMakeLists.txt  test_kwneuroimporter.py
KWNeuroNODDI/: CMakeLists.txt  KWNeuroNODDI.py
KWNeuroNODDI/Resources/: requirements.txt
KWNeuroNODDI/Resources/UI/: KWNeuroNODDI.ui
KWNeuroNODDI/Testing/Python/: CMakeLists.txt  test_kwneuronoddi.py
KWNeuroRegister/: CMakeLists.txt  KWNeuroRegister.py
KWNeuroRegister/Resources/: requirements.txt
KWNeuroRegister/Resources/UI/: KWNeuroRegister.ui
KWNeuroRegister/Testing/Python/: CMakeLists.txt  test_kwneuroregister.py
KWNeuroTemplate/: CMakeLists.txt  KWNeuroTemplate.py
KWNeuroTemplate/Resources/: requirements.txt
KWNeuroTemplate/Resources/UI/: KWNeuroTemplate.ui
KWNeuroTemplate/Testing/Python/: CMakeLists.txt  test_kwneurotemplate.py
KWNeuroTractSeg/: CMakeLists.txt  KWNeuroTractSeg.py
KWNeuroTractSeg/Resources/: requirements.txt
KWNeuroTractSeg/Resources/UI/: KWNeuroTractSeg.ui
KWNeuroTractSeg/Testing/Python/: CMakeLists.txt  test_kwneurotractseg.py
docs/: bridge-reference.md  conf.py  getting-started.md  index.md
docs/tutorials/: dmri-pipeline-walkthrough.md  index.md
experiments/: _bridge.py  e1_bare_install.md  e2_extras.md  e2_tractseg_via_slicer_packaging.py  e3_roundtrip.py  e4_denoise_interactor.md  e4_denoise_interactor.py  e5_slicerjupyter_build.md  e6_async_probe.md
kwneuro_slicer_bridge/: LICENSE  README.md  pyproject.toml
kwneuro_slicer_bridge/src/kwneuro_slicer_bridge/: __init__.py  async_helpers.py  conversions.py  dti.py  dwi.py  transform.py  volume.py
notebooks/: README.md  kwneuro-pipeline-walkthrough.py
